initial user-manegement

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,13 +2,14 @@
   .side__bar
     .side__bar__header
       .side__bar__header__header-box
-        .side__bar__header__header-box__user-name masa
+        .side__bar__header__header-box__user-name
+          =current_user.name
         %ul.side__bar__header__header-box__icon
           %li.side__bar__header__header-box__icon__edit
             = link_to "#" do
               = icon('far', 'edit')
           %li.side__bar__header__header-box__icon__groups-new
-            = link_to "#" do
+            = link_to edit_user_path(current_user) do
               = icon('fa', 'cog')
     .side__bar__groups
       %ul.side__bar__groups__group
