--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,1 +1,20 @@
-<サイドバー>
+.side-bar
+  .side-bar__header
+    .side-bar__header__header-box
+      %h3.side-bar__header__header-box__user-name
+        = current_user.name
+      %ul.side-bar__header__header-box__icon
+        %li.side-bar__header__header-box__icon__edit
+          = link_to new_group_path do
+            = icon('fas', 'edit')
+        %li.side-bar__header__header-box__icon__groups-new
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog')
+  .side-bar__groups
+    - current_user.groups.each do |group|
+      %ul.side-bar__groups__group
+        = link_to '#' do
+          %li.side-bar__groups__group__name
+            = group.name
+          %li.side-bar__groups__group__message
+            メッセージはまだありません
