--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -6,15 +6,15 @@
       %ul.side-bar__header__header-box__icon
         %li.side-bar__header__header-box__icon__edit
           = link_to new_group_path do
-            = icon('fas', 'edit')
+            = icon('far', 'edit')
         %li.side-bar__header__header-box__icon__groups-new
           = link_to edit_user_path(current_user) do
-            = icon('fas', 'cog')
+            = icon('fa', 'cog')
   .side-bar__groups
     - current_user.groups.each do |group|
       %ul.side-bar__groups__group
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           %li.side-bar__groups__group__name
             = group.name
           %li.side-bar__groups__group__message
-            メッセージはまだありません
+            = group.show_last_message
