--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,10 +1,10 @@
-.main-chat__messages
+.main-chat__messages__message
   .main-chat__messages__message__top-message
     .main-chat__messages__message__top-message__name
       = message.user.name
     .main-chat__messages__message__top-message__date
       = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-  .Message
+  .main-chat__messages__message__low-message
     - if message.content.present?
       %p.Message__content
         = message.content
