chat-space autoreload

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,4 @@
+= javascript_include_tag 'autoReload'
 .wrapper
-  .side-bar
-    = render partial: "side_bar"
-  .main-chat
-    = render partial: "main_chat"
+  = render "side_bar"
+  = render "main_chat"
