--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,22 +1,23 @@
-.main-chat__header
-  .main-chat__header__left-box
-    .main-chat__header__left-box__group-name
-      = @group.name
-    .main-chat__header__left-box__group-name__member
-      Member:
-      - @group.users.each do |user|
-        = user.name
-  =link_to edit_group_path(@group) do
-    .right-box__button 
-      Edit
-.main-chat__messages
-  = render @messages
-.main-chat__form
-  = form_with model: [@group, @message], html: {class: "new-message"}, local: true do |f|
-    .main-chat__form__new-message
-      .input-box
-        = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
-        = f.label :image, class: 'input-box__image' do
-          = icon('far', 'image', class: 'icon')
-          = f.file_field :image, class: 'input-box__image-file'
-      = f.submit 'Send', class: 'submit-btn'
+.main-chat
+  .main-chat__header
+    .main-chat__header__left-box
+      .main-chat__header__left-box__group-name
+        = @group.name
+      .main-chat__header__left-box__group-name__member
+        Member:
+        - @group.users.each do |user|
+          = user.name
+    =link_to edit_group_path(@group) do
+      .right-box__button 
+        Edit
+  .main-chat__messages
+    = render @messages
+  .main-chat__form
+    = form_with model: [@group, @message], html: {class: "new-message"}, local: true do |f|
+      .main-chat__form__new-message
+        .input-box
+          = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+          = f.label :image, class: 'input-box__image' do
+            = icon('far', 'image', class: 'icon')
+            = f.file_field :image, class: 'input-box__image-file'
+        = f.submit 'Send', class: 'submit-btn'
